Finish the index style 🙌

--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -8,5 +8,7 @@
     "card_statistics_views": "Visualizações",
     "categorie_primary_not_found": "Nenhuma categoria primária foi encontrada.",
     "categorie_secondary_not_found": "Nenhuma categoria secundária foi encontrada.",
-    "categorie_tertiary_not_found": "Nenhuma categoria terciária foi encontrada."
+    "categorie_tertiary_not_found": "Nenhuma categoria terciária foi encontrada.",
+    "last_activities_title": "Últimas atividades",
+    "our_partners": "Nossos parceiros"
 }
