--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -10,5 +10,16 @@
     "categorie_secondary_not_found": "Nenhuma categoria secundária foi encontrada.",
     "categorie_tertiary_not_found": "Nenhuma categoria terciária foi encontrada.",
     "last_activities_title": "Últimas atividades",
-    "our_partners": "Nossos parceiros"
+    "our_partners": "Nossos parceiros",
+    "register_text_first_call": "Crie sua conta",
+    "register_text_question_email": "Porque querem meu e-mail?",
+    "register_text_response_email": "Usamos seu e-mail para confirmar sua conta e, eventual esquecimen,to da sua senha.",
+    "register_text_required_fields": "Os campos marcados com asteríscos são obrigatórios.",
+    "register_text_choise_genders": "Escolha seu gênero",
+    "register_text_gender_male": "Masculino",
+    "register_text_choise_female": "Feminino",
+    "register_text_choise_undefined": "Outro/Não divulgar",
+    "register_text_choise_terms": "Termos & Condições",
+    "register_text_agree_terms": "Confirmo ter lido e estou de acordo com os Termos & Condições citados ao lado.",
+    "register_text_disagree_terms": "Não aceito os termos."
 }
