--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -13,13 +13,23 @@
     "our_partners": "Nossos parceiros",
     "register_text_first_call": "Crie sua conta",
     "register_text_question_email": "Porque querem meu e-mail?",
-    "register_text_response_email": "Usamos seu e-mail para confirmar sua conta e, eventual esquecimen,to da sua senha.",
-    "register_text_required_fields": "Os campos marcados com asteríscos são obrigatórios.",
+    "register_text_response_email": "Usamos seu e-mail para confirmar sua conta e, eventual esquecimento da sua senha.",
+    "register_text_required_fields": "Os campos marcados com asteríscos são obrigatórios. LEIA OS TERMOS E CONDIÇÕES AO LADO ANTES DE EFETUAR O REGISTRO!",
+    "register_text_field_username": "Nome de usuário",
+    "register_text_field_email": "Endereço de e-mail",
+    "register_text_field_password": "Sua senha",
+    "register_text_field_confirmPassword": "Confirme sua senha",
+    "register_text_field_twitter": "Seu twitter",
+    "register_text_field_discord": "Seu discord",
+    "register_text_field_facebook": "Seu facebook",
+    "register_text_field_github": "Seu github",
+    "register_text_field_gitlab": "Seu gitlab",
     "register_text_choise_genders": "Escolha seu gênero",
     "register_text_gender_male": "Masculino",
     "register_text_choise_female": "Feminino",
     "register_text_choise_undefined": "Outro/Não divulgar",
     "register_text_choise_terms": "Termos & Condições",
     "register_text_agree_terms": "Confirmo ter lido e estou de acordo com os Termos & Condições citados ao lado.",
-    "register_text_disagree_terms": "Não aceito os termos."
+    "register_text_disagree_terms": "Não aceito os termos.",
+    "register_text_button_register": "Cadastrar agora"
 }
