--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -1,4 +1,7 @@
 {
+    "notification_title_error": "Erro!",
+    "notification_title_success": "Sucesso!",
+    "notification_title_warning": "Cuidado!",
     "enviroments_string_error": "Erro ao encontrar o modo padrão de ambiente.",
     "login_forgot_password": "Esqueci minha senha",
     "login_register": "Cadastrar",
@@ -19,11 +22,11 @@
     "register_text_field_email": "Endereço de e-mail",
     "register_text_field_password": "Sua senha",
     "register_text_field_confirmPassword": "Confirme sua senha",
-    "register_text_field_twitter": "Seu twitter",
-    "register_text_field_discord": "Seu discord",
-    "register_text_field_facebook": "Seu facebook",
-    "register_text_field_github": "Seu github",
-    "register_text_field_gitlab": "Seu gitlab",
+    "register_text_field_twitter": "@MeuTwitter",
+    "register_text_field_discord": "MeuDiscord#1234",
+    "register_text_field_facebook": "/MeuFacebook",
+    "register_text_field_github": "/MeuGitHub",
+    "register_text_field_gitlab": "/MeuGitLab",
     "register_text_choise_genders": "Escolha seu gênero",
     "register_text_gender_male": "Masculino",
     "register_text_choise_female": "Feminino",
@@ -31,5 +34,24 @@
     "register_text_choise_terms": "Termos & Condições",
     "register_text_agree_terms": "Confirmo ter lido e estou de acordo com os Termos & Condições citados ao lado.",
     "register_text_disagree_terms": "Não aceito os termos.",
-    "register_text_button_register": "Cadastrar agora"
+    "register_text_button_register": "Cadastrar agora",
+    "validation_field_username_required": "O nome de usuário é obrigatório",
+    "validation_field_username_minlen": "O nome do usuário precisa ter no mínimo 4 caracteres",
+    "validation_field_username_maxlen": "O nome do usuário precisa ter no máximo 100 caracteres",
+    "validation_field_username_regex": "Existem caracteres inválidos no seu nome",
+    "validation_field_email_required": "O e-mail é obrigatório",
+    "validation_field_email_validate": "Informe um e-mail válido",
+    "validation_field_password_required": "Digite sua senha",
+    "validation_field_password_minlen": "Sua senha precisa ter no mínimo 6 caracteres",
+    "validation_field_password_maxlen": "Sua senha precisa ter no máximo 100 caracteres",
+    "validation_field_confirmPassword_required": "Confirme sua senha.",
+    "validation_field_confirmPassword_equalsfield": "As senhas digitadas não conferem uma a outra.",
+    "validation_field_gender_required": "Informe seu gênero",
+    "validation_field_gender_contains": "Valor inválido para gênero.",
+    "validation_field_terms_required": "Preencha o campo de aceitação dos termos",
+    "validation_field_terms_contains": "Valor inválido para termos.",
+    "user_already_registered": "Esse usuário ou e-mail já foi cadastrado",
+    "user_banned_by_ip": "Você foi BANIDO POR IP e NÃO PODE criar uma nova conta.",
+    "register_max_account_by_ip": "Você já atingiu o máximo de contas permitidas.",
+    "registered_success": "Cadastro efetuado com sucesso!"
 }
