--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -80,5 +80,6 @@
     "user_request_badly_response": "Ocorreu um erro ao responder o pedido de amizade.",
     "user_no_friend_requests": "Nenhum pedido de amizade por aqui!",
     "user_started_new_friend": "Começou uma nova amizade",
-    "word_with_spaces": " com "
+    "word_with_spaces": " com ",
+    "user_accept_your_friend_request": " aceitou seu pedido de amizade!"
 }
