Page Quaternary Category & System 🤩

--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -81,5 +81,8 @@
     "user_no_friend_requests": "Nenhum pedido de amizade por aqui!",
     "user_started_new_friend": "Começou uma nova amizade",
     "word_with_spaces": " com ",
-    "user_accept_your_friend_request": " aceitou seu pedido de amizade!"
+    "user_accept_your_friend_request": " aceitou seu pedido de amizade!",
+    "text_post_new_topic": "Novo tópico",
+    "last_topics_comments": "Últimos tópicos vistos",
+    "topics_title": "Tópicos"
 }
