--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -84,5 +84,7 @@
     "user_accept_your_friend_request": " aceitou seu pedido de amizade!",
     "text_post_new_topic": "Novo tópico",
     "last_topics_comments": "Últimos tópicos vistos",
-    "topics_title": "Tópicos"
+    "topics_title": "Tópicos",
+    "create_new_topic": "Novo Tópico",
+    "new_topic_text_title": "Digite o título do tópico"
 }
