Starting new Topic system 🛒

--- a/App/Languages/BR.json
+++ b/App/Languages/BR.json
@@ -56,7 +56,7 @@
     "validation_field_id_required": "Não foi possível localizar o ID do pedido de amizade",
     "validation_field_id_integer": "ID do pedido de amizade inválido.",
     "user_already_registered": "Esse usuário ou e-mail já foi cadastrado",
-    "user_banned_by_ip": "Você foi BANIDO POR IP e NÃO PODE criar uma nova conta.",
+    "user_banned_by_ip": "Você foi BANIDO POR IP e NÃO PODE executar essa ação.",
     "register_max_account_by_ip": "Você já atingiu o máximo de contas permitidas.",
     "registered_success": "Cadastro efetuado com sucesso!",
     "register_text_email_sent": "Obrigado por se registrar no nosso fórum!",
@@ -92,5 +92,8 @@
     "new_topic_allow_reactions": "Permitir reações",
     "new_topic_subcategorie": "Informe o gênero do tópico",
     "yes": "Sim",
-    "no": "Não"
+    "no": "Não",
+    "new_topic_help": "Ajuda",
+    "new_topic_request": "Pedido",
+    "wait_5_minutes_for_new_topic": "Espere 5 minutos para postar um novo tópico"
 }
